# zark-messenger

./: Cargo.toml  LICENSE  LICENSE.md  README.md
include/: zark_messenger.h
sdk/dotnet/: Message.cs  ZarkMessenger.cs  ZarkMessengerException.cs
sdk/golang/: messenger.go
sdk/java/: Config.java  IpcConfig.java  Message.java  ReceivedMessage.java  TcpConfig.java  TransportType.java  ZarkLib.java  ZarkMessenger.java  ZarkMessengerException.java  ZarkMessengerTest.java  pom.xml
src/: lib.rs  main.rs
src/application/: config.rs  instance_manager.rs  messenger.rs  mod.rs
src/domain/: errors.rs  message.rs  mod.rs  rpc_request.rs  rpc_response.rs  serializable.rs  topic.rs
src/infrastructure/: mod.rs
src/infrastructure/memory/: allocator.rs  buffer.rs  mod.rs  pool_allocator.rs
src/infrastructure/queue/: lock_free_queue.rs
src/infrastructure/serialization/: json.rs  mod.rs
src/infrastructure/sync/: waiter.rs
src/infrastructure/transport/: ipc.rs  mod.rs  tcp.rs
src/interfaces/: ffi.rs  mod.rs
src/utils/: mod.rs  platform_specific.rs  zark_uid.rs
