[package]
name = "zark_waf_messenger"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "An in-shared memory broker IPC and Network for ZARK-WAF. It also provides a FFI interface for easy integration with other languages."
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-messenger"
    

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
syslog = "6.0"



[lib]
name = "zark_waf_messenger"
crate-type = ["cdylib"]