[package]
name = "zark_waf_messenger"
version = "0.1.0"
edition = "2021"
authors = ["I. Zeqiri <indrit.zeqiri@gmail.com>", "E. Gjergji <eriol@rtsoftwaregroup.io>"]
description = "An in-shared memory broker IPC and Network for ZARK-WAF. It also provides a FFI interface for easy integration with other languages."
license = "MIT"
repository = "https://github.com/Zark-WAF/zark-messenger"
    

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
syslog = "6.0"
rand = "0.8"
shared_memory = "0.12.4"
crossbeam = "0.8.4"
parking_lot = "0.12.1"
windows = { version = "0.48", features = ["Win32_System_Memory", "Win32_Foundation"] }
lazy_static = "1.4.0"
shm = "0.1.0"

[lib]
name = "zark_waf_messenger"
crate-type = ["cdylib"]


[[bin]]
name = "zark_waf_messenger"
path = "src/main.rs"
